force-app/main/default/objects/Vendor__c/Vendor__c.object-meta.xml
<CustomObject>
    <description>Service provider that can be assigned to an event through EventVendor__c.</description>
    <label>Vendor</label>
    <labelPlural>Vendors</labelPlural>
    <nameField>
        <label>Vendor Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>