force-app/main/default/objects/Vendor__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <defaultValue>Other</defaultValue>
    <label>Category</label>
    <picklistValues>
        <picklistValue>Catering</picklistValue>
        <picklistValue>Audio Visual</picklistValue>
        <picklistValue>Decor</picklistValue>
        <picklistValue>Photography</picklistValue>
        <picklistValue>Security</picklistValue>
        <picklistValue>Transport</picklistValue>
        <picklistValue>Other</picklistValue>
    </picklistValues>
    <type>Picklist</type>
</CustomField>