force-app/main/default/objects/Vendor__c/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <description>Quality rating from 0.0 to 5.0.</description>
    <label>Rating</label>
    <precision>2</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>