force-app/main/default/objects/Vendor__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <defaultValue>Active</defaultValue>
    <label>Status</label>
    <picklistValues>
        <picklistValue>Active</picklistValue>
        <picklistValue>Inactive</picklistValue>
    </picklistValues>
    <type>Picklist</type>
</CustomField>